| Summary: | ASTERISK-25522: ARI: Crash when creating channel via ARI originate with requesting channel | ||
| Reporter: | Matt Jordan (mjordan) | Labels: | |
| Date Opened: | 2015-11-04 14:25:22.000-0600 | Date Closed: | 2015-11-04 15:01:27.000-0600 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_ari Resources/res_ari_channels |
| Versions: | Frequency of Occurrence | ||
| Related Issues: | |||
| Environment: | Attachments: | ( 0) backTrace_11-03_819pm.txt | |
| Description: | When an ARI originate occurs with a requesting channel, the format capabilities structure that is pulled from the requesting channel is not being retrieved with the requesting channel lock held, nor is the lifetime of the format capabilities structure being ref bumped. As a result, other threads can manipulate the {{format_cap}} structure - such as removing all formats from the structure - causing a crash when the new channel is created.
The attached backtrace demonstrates this occurring. | ||
| Comments: | |||